Added button to exchange selected card

--- a/client.html
+++ b/client.html
@@ -79,7 +79,11 @@
                     <div class="answerResult">50</div>
                 </div>
                 <div class="selectionContainer">
-                    <button class="passBtn">Pass</button>
+                    <div class="buttonStack">
+                        <label class="exchangeLabel">Chances: 3</label>
+                        <button class="exchangeBtn">Exchange Card</button>
+                        <button class="passBtn">Pass</button>
+                    </div>
                     <div class="cards">
                         <div class="deck" id="card">1</div>
                         <div class="deck" id="card">2</div>
